2015-07-06  Charlie Zender  <zender@uci.edu>

	* Round-up to one rather than round-down to zero in cnk_map=lfp

	* Fix history_of_appended_files attribute

2015-07-01  Charlie Zender  <zender@uci.edu>

	* Add mibs/mabs/mebs to ncap2

	* NCO 4.5.1-beta1 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.1-beta1 final changes'
	git tag -a 4.5.1-beta1 -m 'Version 4.5.1-beta1 tag: ncap2 fix for min/max on cordinates';git push --tags

	* Verify ncap2 min/max bug reported by Maxim Petrenko. Add regression test and fix bug.

	* NCO 4.5.1-alpha8 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.1-alpha8 final changes'
	git tag -a 4.5.1-alpha8 -m 'Version 4.5.1-alpha8 tag: Regridder	workaround for Tempest 1D grids';git push --tags

	* Diagnose problem (incorrect Tempest dst/src_grid_dims variable) and implement workaround

	* Change ncol to col in code for symmetry with lat/lon

2015-06-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.1-alpha7 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.1-alpha7 final changes'
	git tag -a 4.5.1-alpha7 -m 'Version 4.5.1-alpha7 tag: ncatted rx att_nm, no duplicate cell_methods ';git push --tags

	* Added attribute wildcarding to ncatted

2015-06-28  Charlie Zender  <zender@uci.edu>

	* Introduce routine nco_aed_prc_wrp() to expand attribute regular expressions

2015-06-26  Charlie Zender  <zender@uci.edu>

	* Prevent not only duplicates, but sub-string duplicates in nco_cnv_cll_mth_add()

2015-06-25  Charlie Zender  <zender@uci.edu>

	* Warn when non-standard "cell_method" attribute is detected

	* Prevent nco_cnv_cf_cll_mth_add() from repeating existing cell_methods attribute

	* Move aed_prc functions to nco_att_utl.c to prepare for RX feature

2015-06-22  Charlie Zender  <zender@uci.edu>

	* Bump thr_nbr_max_fsh to 16 for ncks, to 8 (with -D >= 3) for ncwa

	* Version = 'git describe --abbrev=7 --dirty --always --tags', e.g., 4.5.1-alpha6-1-gaa4fe2b-dirty

2015-06-21  Charlie Zender  <zender@uci.edu>
